2008-01-22 Mario Limonciello <superm1@ubuntu.com>
        * ati-packager.sh:
        - Add build dependency resolution
        - Add --autopkg and --installpkg support
          to automatically build/install or just install
        * dists/{dapper,edgy,feisty,gutsy,hardy}/control
        - No longer detect the xserver, its always xorg on Ubuntu
        - Use static control files rather than control.template
        - Update build-dependencies to modern requirements.
        * dists/{dapper,edgy,feisty,gutsy,hardy}/rules
        - No longer detect the X server.  Assume xorg
        - Remove old calls related to rpms
        - Remove symlinks built by ldconfig before packaging
          debs but after calculating shlib dependencies.
        * dists/hardy
        - Drop compiz-manager diversion

2008-01-21 Mario Limonciello <superm1@ubuntu.com>
        * dists/{dapper,edgy,feisty,gutsy,hardy}/rules
        - Build symlinks with ldconfig before building debs
 
2008-01-11 Mario Limonciello <superm1@ubuntu.com>
        * ati-packager.sh:
        - Re-order warning messages that may be displayed.
        * dists/feisty/compiz-manager:
        - Add file to fix building feisty packages
        * dists/{feisty,gutsy,hardy/driver.postrm}:
        - Properly cleanup old compiz-manager xdg file.

2007-12-19 Mario Limonciello <superm1@ubuntu.com>
        * ati-packager.sh
        - Add optional LSB release detection support.
        - Any invalid releases will automatically fall
          back to LSB release detection for selection.

2007-12-11 Mario Limonciello <superm1@ubuntu.com>
        * ati-packager.sh
        - Remove old distros and add hardy

2007-12-10 Mario Limonciello <superm1@ubuntu.com>
        * dists/{hardy, gutsy}
        - Force install dkms built drivers in case
          they were wanting it reinstalled.
        * (re)-Correct typo for s/quite/quiet/
        * dists/hardy

2007-12-06 Laurent Bigonville <bigon@bigon.be>

	* dists/hardy/driver.atieventsd.init